Modified dancer classes to have better inheritance fields

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,13 +8,15 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/bouncyDancer.js"></script>
     <script src="src/spinnyDancer.js"></script>
+    <script src="src/randomWalkyDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BouncyDancer">add a bouncy dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SpinnyDancer">add a spinny dancer</a>      
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SpinnyDancer">add a spinny dancer</a>     
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="RandomWalkyDancer">add a random walky dancer</a>      
     </div>
     <script src="src/init.js"></script>
   </body>
