Added gifs for dancers and background for body

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -13,6 +13,8 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
+      <a href="#" class="lineUpOnX" >Line Up Vertical</a>    
+      <a href="#" class="lineUpOnY" >Line Up Horizontal</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BouncyDancer">add a bouncy dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="SpinnyDancer">add a spinny dancer</a>     
