Implement interaction and collision response

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -3,6 +3,7 @@
   <head>
     <title>Object Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="lib/animate.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
@@ -12,7 +13,7 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
+      <span class="title">Pacman Ghost Dance Party</span>
       <a href="#" class="lineUpOnX" >Line Up Vertical</a>    
       <a href="#" class="lineUpOnY" >Line Up Horizontal</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    
